<resources>
    <string name="app_name">TD2</string>
    <string name="mots_de_passe">Mots de passe</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="soir">Soir</string>
    <string name="midi">Midi</string>
    <string name="horaire">Horaire :</string>
    <string name="fruit">Fruit</string>
    <string name="fromage">Fromage</string>
    <string name="suppl_ments">Suppléments :</string>
    <string name="choix">Choix</string>
    <string name="plat">Plat</string>
    <string name="entr_e">Entrée :</string>
    <string name="repas">REPAS</string>
    <string name="meteo">METEO</string>
    <string name="date">Date :</string>
    <string name="heure">Heure :</string>
    <string name="vitesse_du_vent_km_h">Vitesse du vent km/h</string>
    <string name="temps">Temps :</string>
    <string-array name="temps_choose">
        <item>Soleil</item>
        <item>Nuageux</item>
        <item>Orage</item>
        <item>Pluie</item>
        <item>Autre</item>
    </string-array>
</resources>